client/index.css
:root {
    --navbar-height: 67px;
    --sidenav-width: 250px;
    --date-time-width: 70px;
}

body
{
    overflow: hidden;
}

h5
{
    margin: 0;
}

span.date-time
{
    width: var(--date-time-width);
    text-align: end;
}

.page-content
{
    height: calc( 100vh - var(--navbar-height) );
    display: flex;
}

.conversation-window
{
    height: 100%;
    width: 100%;
    overflow-y: auto;
    display: flex;
    flex-direction: column;
}

.message-box
{
    min-width: 100px;
}

.conversation-container
{
    overflow-y: auto;
    max-width: var(--sidenav-width);
    min-width: var(--sidenav-width);
}

.conversation-list-item
{
    max-height: 100px;
    cursor: pointer;
}

.conversation-list-item p
{
    width: 70%;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.messages-container
{
    height: 100%;
    overflow-y: scroll;
}

.google-sign
{
    float: left; /* don't be alone at the top */
    padding: 0px 0px 0px;
}

.google-container
{
    /* display: flex; */
    align-items: center;
    float: left; /* Align with other nav items */
    height: calc(var(--navbar-height) - 11px);
}

.logout-button
{
    height: 44px;
    float: right;
    padding: 0px 0px 0px;
}

.username
{
    font-size: 32px;
    padding: 0px 0px 0px;
}

.no-scroll 
{
    overflow:hidden; /* used for main body */
}

.preview-text
{
    word-break: break-all; /* allow text to go to multiple lines without spaces*/
    white-space: normal;
}

.conversation-contacts-list
{
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: calc ()
}

.conversation-contacts-list:hover
{
    white-space: normal;
    overflow: visible;
    text-overflow: unset;
    word-wrap: break-word;
}

 /* Login Popup */
div#login-popup
{
    /* This provides a opaque, black, background 
    that sits on top and prevents the clicking of 
    other elements. */
    visibility: visible;
    position: fixed;
    z-index: 9999;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.80)
}

 div#login-popup > aside
 {
    width:300px;
    height: 200px;
    border-radius: 7px;
    padding: 10px;

    /* Centers object to the middle of the screen */
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(255, 255, 255, 1);
 }

